ivo added as teacher

--- a/course.yml
+++ b/course.yml
@@ -11,6 +11,7 @@ license: <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0
 security:
     professors:
         - mstegem1
+        - ivvulpe1
     assistants:
         - mvbeek1
 
