--- a/20 Problem Sets/10 Week 2/submit.yml
+++ b/20 Problem Sets/10 Week 2/submit.yml
@@ -2,6 +2,8 @@ name: w2
 form: false
 required:
     - primes.py
+    - frends.py
+    - goldbach.py
 optional:
     - products.py
     - nuggets.py
