--- a/20 Problem Sets/10 Week 2/submit.yml
+++ b/20 Problem Sets/10 Week 2/submit.yml
@@ -2,7 +2,7 @@ name: w2
 form: false
 required:
     - primes.py
-    - frends.py
+    - friends.py
     - goldbach.py
 optional:
     - products.py
