--- a/10 Workshops/20 Week 3/submit.yml
+++ b/10 Workshops/20 Week 3/submit.yml
@@ -4,7 +4,5 @@ required:
     - homework2.py
     - pyplot.py
 optional:
-    - pig_latin.py
+    - bingo.py
     - recursion.py
-dependent_grades:
-    - hw3
